# github-daily-report

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml
src/config/: settings.py
src/github/: client.py
src/models/: report.py
src/notification/: base.py  discord.py  factory.py  lark.py  line.py
src/report/: generator.py
src/services/: collector.py
src/utils/: logger.py
tests/: test_config.py  test_notification.py  test_report_generator.py
