[project]
name = "github-daily-report"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.scripts]
daily-report = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "basedpyright>=1.28",
    "pytest>=8.3",
    "pytest-mock>=3.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "main.py", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
